[Post] Add Java 16/17 changes to discussion of weak encapsulation